--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <!-- Setting the viewport to make the website look good on all devices:-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Set page title-->
     <title>Fernando Chazarreta - WDD 230 - Web Frontend Development</title>
 
@@ -11,38 +11,38 @@
     <meta
       name="description"
       content="This is the course assignment portal for BYU's 'WDD 230 - Web Frontend Development' course. By Fernando Chazarreta"
-    />
-    <meta name="author" content="Fernando Chazarreta" />
+    >
+    <meta name="author" content="Fernando Chazarreta">
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
     <meta
       property="og:title"
       content="Fernando Chazarreta - WDD 230 - Web Frontend Development"
-    />
-    <meta property="og:type" content="website" />
+    >
+    <meta property="og:type" content="website">
     <meta
       property="og:image"
       content="https://media-cdn.tripadvisor.com/media/photo-s/14/b8/8c/ea/photo0jpg.jpg"
-    />
-    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/" />
+    >
+    <meta property="og:url" content="https://fernandochaza.github.io/wdd230/">
 
     <!-- Google fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500&family=Inter:wght@100;300;400;700;800;900&display=swap"
       rel="stylesheet"
-    />
+    >
     <!-- External CSS-->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
+    >
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <header>
@@ -50,7 +50,7 @@
         id="profile-picture"
         src="images/profile-pic.webp"
         alt="Fernando Chazarreta's profile picture"
-      />
+      >
       <h1>Fernando Chazarreta</h1>
       <div class="dark-mode-container">
         <button aria-label="Toggle Dark Mode" class="dark-light-button">
@@ -76,18 +76,18 @@
           <source
             media="(max-width: 768px) 768w"
             srcset="images/buenos-aires-landscape-768w.webp"
-          />
+          >
           <source
             media="(min-width: 769px) 900x"
             srcset="images/buenos-aires-landscape-900w.webp"
-          />
+          >
           <img
             class="hero-image"
             src="images/buenos-aires-landscape-768w.webp"
             alt="Entrance to the Buenos Aires Temple"
             width="768"
             height="480"
-          />
+          >
         </picture>
       </section>
       <div class="title-container">
