fix: Correct srcset values

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@
         <h2 class="hero-label">Buenos Aires Temple</h2>
         <picture>
           <source
-            media="(max-width: 768px) 768w"
-            srcset="images/buenos-aires-landscape-768w.webp"
+            media="(max-width: 768px)"
+            srcset="images/buenos-aires-landscape-768w.webp 768w"
           >
           <source
-            media="(min-width: 769px) 900x"
-            srcset="images/buenos-aires-landscape-900w.webp"
+            media="(min-width: 769px)"
+            srcset="images/buenos-aires-landscape-900w.webp 900x"
           >
           <img
             class="hero-image"
