fix: Correct srcset values

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
         <picture>
           <source
             media="(max-width: 768px)"
-            srcset="images/buenos-aires-landscape-768w.webp 768w"
+            srcset="images/buenos-aires-landscape-768w.webp"
           >
           <source
             media="(min-width: 769px)"
-            srcset="images/buenos-aires-landscape-900w.webp 900x"
+            srcset="images/buenos-aires-landscape-900w.webp"
           >
           <img
             class="hero-image"
