feat(DiscoverPage): Create responsive grid structure

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -67,14 +67,13 @@
         <li><a class="nav-link" href="#">Join Now</a></li>
       </ul>
     </nav>
-    <section class="hero-container">
+    <section class="hero-container discover">
       <img
         class="hero-image"
         src="images/gorosito-hero.webp"
         alt="Hero Background"
       />
-      <h1 class="hero-header">Caleta Olivia<br />Chamber of Commerce</h1>
-      <a class="button hero-call-to-action" href="#">Join</a>
+      <h1 class="hero-header discover">Welcome to<br />Caleta Olivia</h1>
     </section>
     <aside class="weather-widget">
       <!-- <h3>Caleta Olivia</h3> -->
@@ -85,8 +84,32 @@
       <h3>Our Directory</h3>
       <a class="button directory-button" href="#">Directory</a>
     </section>
-    <main>
-      
+    <main class="discover-main">
+        <section class="info-section">
+          <h3>Caleta Olivia</h3>
+          <p>Situated on the picturesque coast of Argentina, Caleta Olivia is a thriving city that serves as a gateway 
+            to the remarkable beauty of Patagonia. With a rich history and a promising future, 
+            Caleta Olivia has established itself as a prominent commercial and industrial center in the region.
+          </p>
+          <div class="vertical-division"></div>
+          <aside class="side-image">
+            <picture class="side-image-container">
+              <source media="(max-width: 576px)" srcset="images/dock-576-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/dock-768-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/dock-576-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/dock-900-40.webp" type="image/webp">
+              <img src="images/dock-576-30.webp" alt="Responsive Image" width="576" height="323">
+            </picture>
+          </aside>
+        </section>
+
+        <section>
+          <h3></h3>
+        </section>
+        <section>
+          <h3></h3>
+        </section>
+
     </main>
     <footer>
       <div class="site-footer">
