feat(figures): Add new images with lazy loading and hover effects

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,49 +87,59 @@
       <a class="button directory-button" href="#">Directory</a>
     </section>
     <main class="discover-main">
-        <section class="info-section left-text">
+      <section class="info-section left-text">
+        <div class="info-text">
           <h3>A Vibrant Commercial Hub on Argentina's Coast</h3>
-          <p>Situated on the picturesque coast of Argentina, Caleta Olivia is a thriving city that serves as a gateway 
+          <p>
+            Situated on the picturesque coast of Argentina, Caleta Olivia is a thriving city that serves as a gateway 
             to the remarkable beauty of Patagonia. With a rich history and a promising future, 
             Caleta Olivia has established itself as a prominent commercial and industrial center in the region.
           </p>
-          <div class="vertical-division"></div>
-          <aside class="side-image">
-            <figure>
+        </div>
+        <div class="vertical-division"></div>
+        <aside class="side-image">
+          <figure class="figure-bottom">
             <picture class="side-image-container">
-              <source media="(max-width: 576px)" srcset="images/dock-576-30.webp" type="image/webp">
-              <source media="(max-width: 768px)" srcset="images/dock-768-30.webp" type="image/webp">
-              <source media="(max-width: 900px)" srcset="images/dock-576-30.webp" type="image/webp">
-              <source media="(min-width: 1024px)" srcset="images/dock-900-40.webp" type="image/webp">
-              <img src="images/dock-576-30.webp" alt="Caleta Olivia's old dock" width="576" height="323">
-            </picture>
-            <figcaption>A cloudy afternoon at the old Caleta Olivia's dock</figcaption>
-          </figure>
-          </aside>
-        </section>
+            <source media="(max-width: 576px)" srcset="images/welcome-576-324-30.webp" type="image/webp">
+            <source media="(max-width: 768px)" srcset="images/welcome-768-432-30.webp" type="image/webp">
+            <source media="(max-width: 900px)" srcset="images/welcome-576-324-30.webp" type="image/webp">
+            <source media="(min-width: 1024px)" srcset="images/welcome-900-506-40.webp" type="image/webp">
+            <img src="images/welcome-576-324-30.webp" alt="Caleta Olivia's old dock" width="576" height="323" loading="lazy">
+          </picture>
+          <figcaption>Welcome sign at Caleta Olivia's north entrance</figcaption>
+        </figure>
+        </aside>
+      </section>
 
-        <section class="info-section right-text">
+      <section class="info-section right-text">
+        <div class="info-text">
           <h3>Demographic Content and Statistics</h3>
-          <p>Boasting a diverse population of approximately 70,000 residents, Caleta Olivia represents a vibrant tapestry of cultures and backgrounds. The city's demographic composition reflects a dynamic mix of people from various ethnicities, creating a multicultural atmosphere that fosters inclusivity and mutual respect. The residents of Caleta Olivia take pride in their community, fostering a strong sense of belonging and camaraderie.
+          <p>
+            Boasting a diverse population of approximately 70,000 residents, Caleta Olivia represents a vibrant tapestry of cultures and backgrounds. 
+            The city's demographic composition reflects a dynamic mix of people from various ethnicities, creating a multicultural atmosphere that fosters
+              inclusivity and mutual respect. The residents of Caleta Olivia take pride in their community, fostering a strong sense of belonging and camaraderie.
           </p>
-          <div class="vertical-division"></div>
-          <aside class="side-image">
-            <figure>
-              <picture class="side-image-container">
-                <source media="(max-width: 576px)" srcset="images/dock-576-30.webp" type="image/webp">
-                <source media="(max-width: 768px)" srcset="images/dock-768-30.webp" type="image/webp">
-                <source media="(max-width: 900px)" srcset="images/dock-576-30.webp" type="image/webp">
-                <source media="(min-width: 1024px)" srcset="images/dock-900-40.webp" type="image/webp">
-                <img src="images/dock-576-30.webp" alt="Caleta Olivia's old dock" width="576" height="323">
-              </picture>
-            <figcaption>A cloudy afternoon at the old Caleta Olivia's dock</figcaption>
-            </figure>
-          </aside>
-        </section>
+        </div>
+        <div class="vertical-division"></div>
+        <aside class="side-image">
+          <figure class="figure-bottom">
+            <picture class="side-image-container">
+              <source media="(max-width: 576px)" srcset="images/carnaval-576-324-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/carnaval-768-432-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/carnaval-576-324-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/carnaval-900-506-40.webp" type="image/webp">
+              <img src="images/carnaval-576-324-30.webp" alt="People in Carnaval season in Caleta Olivia" width="576" height="323" loading="lazy">
+            </picture>
+          <figcaption>People in Carnaval season in Caleta Olivia</figcaption>
+          </figure>
+        </aside>
+      </section>
 
-        <section class="info-section left-text">
+      <section class="info-section left-text">
+        <div class="info-text">
           <h3>Economic Profile</h3>
-          <p>Caleta Olivia is renowned for its robust economy, driven by key industries 
+          <p>
+            Caleta Olivia is renowned for its robust economy, driven by key industries 
             that contribute to the city's prosperity. The city serves as a vital hub 
             for the oil and gas sector, playing a significant role in Argentina's energy landscape. 
             Additionally, the thriving fishing industry and extensive agricultural 
@@ -137,22 +147,100 @@
             and innovation, Caleta Olivia is continuously exploring new avenues for economic 
             development, attracting investment and creating opportunities for both local and international businesses.
           </p>
-          <div class="vertical-division"></div>
-          <aside class="side-image">
-            <figure>
+          <p>
+            Puerto Caleta Paula, nestled within Caleta Olivia, is a vibrant port that serves as 
+            a vital hub for trade and connectivity. With its picturesque views of the Atlantic Ocean, 
+            the port welcomes ships of all kinds, from cargo vessels to fishing boats. 
+            Beyond its industrial significance, Puerto Caleta Paula exudes maritime charm, 
+            offering a waterfront promenade filled with fresh seafood, bustling fish markets, 
+            and colorful fishing boats. As the sun sets, the port transforms into a tranquil setting,
+              inviting visitors to embrace the coastal ambiance and immerse themselves in Caleta Olivia's seafaring heritage.
+          </p>
+        </div>
+        <div class="vertical-division"></div>
+        <aside class="side-image">
+          <figure class="figure-bottom">
             <picture class="side-image-container">
-              <source media="(max-width: 576px)" srcset="images/dock-576-30.webp" type="image/webp">
-              <source media="(max-width: 768px)" srcset="images/dock-768-30.webp" type="image/webp">
-              <source media="(max-width: 900px)" srcset="images/dock-576-30.webp" type="image/webp">
-              <source media="(min-width: 1024px)" srcset="images/dock-900-40.webp" type="image/webp">
-              <img src="images/dock-576-30.webp" alt="Caleta Olivia's old dock" width="576" height="323">
+              <source media="(max-width: 576px)" srcset="images/pumpjack-576-324-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/pumpjack-768-432-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/pumpjack-576-324-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/pumpjack-900-506-40.webp" type="image/webp">
+              <img src="images/pumpjack-576-324-30.webp" alt="A petroleum pumpjack in Caleta Olivia's landscape" width="576" height="323" loading="lazy">
             </picture>
-            <figcaption>A cloudy afternoon at the old Caleta Olivia's dock</figcaption>
-          </figure>
-          </aside>
-        </section>
+          <figcaption>One of the thousands petroleum pumpjack in Caleta Olivia's landscape</figcaption>
+        </figure>
+        <figure class="figure-bottom">
+          <picture class="side-image-container">
+            <source media="(max-width: 576px)" srcset="images/port-576-324-30.webp" type="image/webp">
+            <source media="(max-width: 768px)" srcset="images/port-768-432-30.webp" type="image/webp">
+            <source media="(max-width: 900px)" srcset="images/port-576-324-30.webp" type="image/webp">
+            <source media="(min-width: 1024px)" srcset="images/port-900-506-40.webp" type="image/webp">
+            <img src="images/port-576-324-30.webp" alt="Fishing boats in 'Caleta Paula' port" width="576" height="323" loading="lazy">
+          </picture>
+        <figcaption>Fishing boats adorn the lively port of Puerto Caleta Paula</figcaption>
+      </figure>
 
+        </aside>
+      </section>
+
+      <section class="info-section right-text">
+        <div class="info-text">
+          <h3>Wild life</h3>
+          <p>
+            This region is blessed with a rich variety of fauna, offering visitors an opportunity to witness the beauty of the local animal kingdom. 
+          </p>
+          <p>
+            One of the most iconic creatures found here is the guanaco. These graceful camelids, resembling llamas, roam freely across the vast 
+            landscapes of Caleta Olivia. With their slender bodies and majestic presence, guanacos add a touch of elegance to the region's natural surroundings.
+          </p>
+          <p>
+            Venture deeper into the wilderness, and you might catch a glimpse of the cunning foxes that call this area home. 
+            These clever and adaptable creatures can be spotted traversing the plains, showcasing their agility and stealth 
+            as they search for food and explore their habitats.
+          </p>
+          <p>
+            As you explore the stunning coastline, be prepared to encounter the playful and charismatic sea lions. 
+            These marine mammals inhabit the nearby shores and rocky outcrops, basking in the sun and occasionally 
+            venturing into the refreshing waters of the Atlantic Ocean. Their amusing antics and distinct calls create 
+            an enchanting atmosphere along the coast.
+          </p>
+        </div>
+        <div class="vertical-division"></div>
+        <aside class="side-image">
+          <figure class="figure-bottom">
+            <picture class="side-image-container">
+              <source media="(max-width: 576px)" srcset="images/guanaco-576-324-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/guanaco-768-432-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/guanaco-576-324-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/guanaco-900-506-40.webp" type="image/webp">
+              <img src="images/guanaco-576-324-30.webp" alt="A guanaco" width="576" height="323" loading="lazy">
+            </picture>
+          <figcaption>A graceful guanaco roaming the vast landscapes of Caleta Olivia.</figcaption>
+          </figure>
+          <figure class="figure-bottom">
+            <picture class="side-image-container">
+              <source media="(max-width: 576px)" srcset="images/fox-576-324-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/fox-768-432-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/fox-576-324-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/fox-900-506-40.webp" type="image/webp">
+              <img src="images/fox-576-324-30.webp" alt="A petroleum pumpjack in Caleta Olivia's outside" width="576" height="323" loading="lazy">
+            </picture>
+          <figcaption>A clever and agile fox navigating the plains of Caleta Olivia.</figcaption>
+          </figure>
+          <figure class="figure-bottom">
+            <picture class="side-image-container">
+              <source media="(max-width: 576px)" srcset="images/sea-lions-576-324-30.webp" type="image/webp">
+              <source media="(max-width: 768px)" srcset="images/sea-lions-768-432-30.webp" type="image/webp">
+              <source media="(max-width: 900px)" srcset="images/sea-lions-576-324-30.webp" type="image/webp">
+              <source media="(min-width: 1024px)" srcset="images/sea-lions-900-506-40.webp" type="image/webp">
+              <img src="images/sea-lions-576-324-30.webp" alt="A petroleum pumpjack in Caleta Olivia's outside" width="576" height="323" loading="lazy">
+            </picture>
+          <figcaption>A lively gathering of sea lions basking in the sun along the Caleta Olivia coastline</figcaption>
+          </figure>
+        </aside>
+      </section>
     </main>
+
     <footer>
       <div class="site-footer">
         <div class="location">
