feat: Add last visit message

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -87,6 +87,9 @@
       <a class="button directory-button" href="#">Directory</a>
     </section>
     <main class="discover-main">
+      <div class="visits-count">
+        <p><span class="visits"></span></p>
+      </div>
       <section class="info-section left-text">
         <div class="info-text">
           <h3>A Vibrant Commercial Hub on Argentina's Coast</h3>
