fix(index): correct broken images. Fix hero responsiveness

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -61,7 +61,7 @@
     </header>
     <nav id="nav-section">
       <ul class="navigation-container">
-        <li><a class="nav-link" href="#">Home</a></li>
+        <li><a class="nav-link" href="index.html">Home</a></li>
         <li><a class="nav-link" href="#">Discover</a></li>
         <li><a class="nav-link" href="#">Directory</a></li>
         <li><a class="nav-link" href="#">Join Now</a></li>
