--- a/chamber/index.html
+++ b/chamber/index.html
@@ -62,7 +62,7 @@
     <nav id="nav-section">
       <ul class="navigation-container">
         <li><a class="nav-link" href="#">Home</a></li>
-        <li><a class="nav-link" href="#">Discover</a></li>
+        <li><a class="nav-link" href="discover.html">Discover</a></li>
         <li><a class="nav-link" href="#">Directory</a></li>
         <li><a class="nav-link" href="#">Join Now</a></li>
       </ul>
@@ -148,7 +148,7 @@
         <div class="spotlight-card spotlight-1">
           <img
             class="spotlight-card-image"
-            src="images/gorosito-hero.webp"
+            src="images/welcome-576-324-30.webp"
             alt=""
           />
           <h3>Place Title</h3>
@@ -163,7 +163,7 @@
         <div class="spotlight-card spotlight-2">
           <img
             class="spotlight-card-image"
-            src="images/gorosito-hero.webp"
+            src="images/welcome-576-324-30.webp"
             alt=""
           />
           <h3>Place Title</h3>
@@ -176,7 +176,7 @@
         <div class="spotlight-card spotlight-3">
           <img
             class="spotlight-card-image"
-            src="images/gorosito-hero.webp"
+            src="images/welcome-576-324-30.webp"
             alt=""
           />
           <h3>Place Title</h3>
@@ -189,7 +189,7 @@
         <div class="spotlight-card spotlight-4">
           <img
             class="spotlight-card-image"
-            src="images/gorosito-hero.webp"
+            src="images/welcome-576-324-30.webp"
             alt=""
           />
           <h3>Place Title</h3>
