--- a/chamber/index.html
+++ b/chamber/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <!-- Set the viewport to make the website look good on all devices:-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Set page title-->
     <title>Caleta Olivia Chamber of Commerce</title>
@@ -12,45 +12,45 @@
     <meta
       name="description"
       content="The Chamber of Commerce represents our city's main businesses, attractions and places of interest"
-    />
-    <meta name="author" content="Fernando Chazarreta" />
+    >
+    <meta name="author" content="Fernando Chazarreta">
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta property="og:title" content="Caleta Olivia Chamber of Commerce" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://raw.githubusercontent.com/fernandochaza/wdd230/main/chamber/images/gorosito-hero.webp" />
+    <meta property="og:title" content="Caleta Olivia Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://raw.githubusercontent.com/fernandochaza/wdd230/main/chamber/images/gorosito-hero.webp">
     <meta
       property="og:url"
       content="https://fernandochaza.github.io/wdd230/chamber/"
-    />
+    >
 
     <!-- Google fonts preconnect -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
       rel="stylesheet"
-    />
+    >
 
     <!-- External CSS files -->
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-    />
-    <link rel="stylesheet" href="styles/base.css" />
-    <link rel="stylesheet" href="styles/larger.css" />
-    <link rel="stylesheet" href="styles/desktop.css" />
+    >
+    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
+    <link rel="stylesheet" href="styles/desktop.css">
 
     <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
   </head>
   <body>
     <header>
-      <img class="logo" src="images/logo.png" alt="Logo" />
+      <img class="logo" src="images/logo.png" alt="Logo">
       <div class="header-title-container">
         <h3>Caleta Olivia</h3>
         <h3>Chamber of Commerce</h3>
@@ -75,7 +75,7 @@
         <source media="(min-width: 1024px)" srcset="images/gorosito-hero-1200-500-40.webp" type="image/webp">
         <img src="images/gorosito-hero-576-240-30.webp" alt="Caleta Olivia's Gorosito statue" width="576" height="240">
       </picture>
-      <h1 class="hero-header">Caleta Olivia<br />Chamber of Commerce</h1>
+      <h1 class="hero-header">Caleta Olivia<br>Chamber of Commerce</h1>
       <a class="button hero-call-to-action" href="#">Join</a>
     </section>
     <aside class="weather-widget">
@@ -104,8 +104,8 @@
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
-          />
-          <hr />
+          >
+          <hr>
         </div>
         <div class="event-card event-2">
           <h3 class="event-card-title">Event Title</h3>
@@ -121,8 +121,8 @@
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
-          />
-          <hr />
+          >
+          <hr>
         </div>
         <div class="event-card event-3">
           <h3 class="event-card-title">Event Title</h3>
@@ -138,8 +138,8 @@
             class="event-card-image"
             src="images/dots-circle-horizontal.png"
             alt="Go to event button"
-          />
-          <hr />
+          >
+          <hr>
         </div>
       </section>
       <section class="spotlights-section">
@@ -150,7 +150,7 @@
             class="spotlight-card-image"
             src="images/welcome-576-324-30.webp"
             alt=""
-          />
+          >
           <h3>Place Title</h3>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente
@@ -165,7 +165,7 @@
             class="spotlight-card-image"
             src="images/welcome-576-324-30.webp"
             alt=""
-          />
+          >
           <h3>Place Title</h3>
           <p>
             This is the place text. This is the place text. This is the place
@@ -178,7 +178,7 @@
             class="spotlight-card-image"
             src="images/welcome-576-324-30.webp"
             alt=""
-          />
+          >
           <h3>Place Title</h3>
           <p>
             This is the place text. This is the place text. This is the place
@@ -191,7 +191,7 @@
             class="spotlight-card-image"
             src="images/welcome-576-324-30.webp"
             alt=""
-          />
+          >
           <h3>Place Title</h3>
           <p>
             This is the place text. This is the place text. This is the place
@@ -211,7 +211,7 @@
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
           <p>San Martín 1869</p>
-          <img class="location-icon" src="images/map.png" alt="Location Icon" />
+          <img class="location-icon" src="images/map.png" alt="Location Icon">
         </div>
         <div>|</div>
         <div class="contact">
@@ -221,8 +221,8 @@
               class="whatsapp-icon"
               src="images/whatsapp.png"
               alt="Whatsapp Icon"
-            />
-            <img class="email-icon" src="images/mail.png" alt="Email Icon" />
+            >
+            <img class="email-icon" src="images/mail.png" alt="Email Icon">
           </div>
         </div>
         <div>|</div>
@@ -232,17 +232,17 @@
             class="instagram-icon"
             src="images/instagram.png"
             alt="Instagram Icon"
-          />
+          >
           <img
             class="linkedin-icon"
             src="images/linkedin.png"
             alt="LinkedIn Icon"
-          />
+          >
           <img
             class="youtube-icon"
             src="images/youtube.png"
             alt="Youtube Icon"
-          />
+          >
         </div>
       </div>
       <div class="project-sign">
