fix: Correct title

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Set page title-->
-    <title>Caleta Olivia Chamber of Commerce</title>
+    <title>Discover Caleta Olivia - Chamber of Commerce</title>
 
     <!-- Meta tags: Description an author. Used in Google results page -->
     <meta
@@ -16,9 +16,9 @@
     <meta name="author" content="Fernando Chazarreta">
 
     <!-- Meta tags: Open graph properties. Used when the page is shared into Facebook -->
-    <meta property="og:title" content="Caleta Olivia Chamber of Commerce">
+    <meta property="og:title" content="Discover Caleta Olivia's culture, demographics, and main sites of interest.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://raw.githubusercontent.com/fernandochaza/wdd230/main/chamber/images/gorosito-hero.webp">
+    <meta property="og:image" content="https://raw.githubusercontent.com/fernandochaza/wdd230/main/chamber/images/welcome-900-506-40.webp">
     <meta
       property="og:url"
       content="https://fernandochaza.github.io/wdd230/chamber/"
@@ -75,7 +75,7 @@
         <source media="(min-width: 1024px)" srcset="images/gorosito-hero-1200-500-40.webp" type="image/webp">
         <img src="images/gorosito-hero-576-240-30.webp" alt="Caleta Olivia's Gorosito statue" width="576" height="240">
       </picture>
-      <h1 class="hero-header discover">Welcome to<br>Caleta Olivia</h1>
+      <h1 class="hero-header discover">Discover<br>Caleta Olivia</h1>
     </section>
     <aside class="weather-widget">
       <span class="moving-text">☀ Caleta Olivia | 23°C | Wind 23km/h East</span>
