--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -296,6 +296,6 @@
         <p class="last-modification">Last Modification: </p>
       </div>
     </footer>
-    <script src="scripts/main.js" type="module"></script>
+    <script src="scripts/discover.js" type="module"></script>
   </body>
 </html>
