feat: Add weather card

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -77,8 +77,12 @@
       </picture>
       <h1 class="hero-header discover">Discover<br>Caleta Olivia</h1>
     </section>
-    <aside class="weather-widget">
-      <span class="moving-text">☀ Caleta Olivia | 23°C | Wind 23km/h East</span>
+    <aside class="weather-card">
+      <div class="weather-text">
+        <p class="weather-measure">23°C</p>
+        <p class="weather-city">Caleta Olivia</p>
+      </div>
+      <p class="weather-image">☀️</p>
     </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
