--- a/chamber/index.html
+++ b/chamber/index.html
@@ -78,10 +78,12 @@
       <h1 class="hero-header">Caleta Olivia<br>Chamber of Commerce</h1>
       <a class="button hero-call-to-action" href="#">Join</a>
     </section>
-    <aside class="weather-widget">
-      <!-- <h3>Caleta Olivia</h3> -->
-      <!-- <a class="button weather-button" href="#">More...</a> -->
-      <span class="moving-text">☀ Caleta Olivia | 23°C | Wind 23km/h East</span>
+    <aside class="weather-card">
+      <div class="weather-text">
+        <p class="weather-measure">23°C</p>
+        <p class="weather-city">Caleta Olivia</p>
+      </div>
+      <p class="weather-image">☀️</p>
     </aside>
     <section class="directory-button-container">
       <h3>Our Directory</h3>
