feat: HTML Forms. Finish week04 prepare

--- a/index.html
+++ b/index.html
@@ -120,6 +120,22 @@
             Week 03 -
             <a href="week03/responsive-images.html">Responsive Images</a>
           </li>
+          <li>
+            Week 04 -
+            <a href="https://codepen.io/fernandochaza/pen/eYQWedV">Pseudo-classes</a>
+          </li>
+          <li>
+            Week 04 -
+            <a href="https://drive.google.com/file/d/1ToZmsOtrpvndKpxdvYWjitUX4cdEaOzD/view?usp=sharing">CSS Combinators</a>
+          </li>
+          <li>
+            Week 04 -
+            <a href="week04/tablebuild.html">HTML Tables</a>
+          </li>
+          <li>
+            Week 04 -
+            <a href="week04/form-start/index.html">HTML Forms</a>
+          </li>
         </ul>
       </section>
       <section class="card">
